Task362-Data-To-UNET

--- a/BSSCSFramework/TBI_Group9_UNET.ipynb
+++ b/BSSCSFramework/TBI_Group9_UNET.ipynb
@@ -11,25 +11,68 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
       "metadata": {
         "id": "3tpRHd5-41Cu",
         "colab_type": "code",
-        "outputId": "362e131f-12fd-4382-822d-d146c2719580",
+        "outputId": "4a65a112-fb3e-44c8-bd4f-a92d99f4dab2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 434
+          "height": 238
         }
       },
       "cell_type": "code",
       "source": [
         "!pip install kaggle\n",
+        "!pip install pillow\n",
         "import json\n",
         "import pandas as pd\n",
-        "\n",
+        "import tqdm as tqdm\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "from tqdm import tqdm as tqdm\n",
+        "from PIL import Image\n",
+        "import tensorflow as tf\n"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: kaggle in /usr/local/lib/python3.6/dist-packages (1.5.2)\n",
+            "Requirement already satisfied: urllib3<1.23.0,>=1.15 in /usr/local/lib/python3.6/dist-packages (from kaggle) (1.22)\n",
+            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.6/dist-packages (from kaggle) (1.11.0)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.6/dist-packages (from kaggle) (2018.11.29)\n",
+            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.5.3)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.18.4)\n",
+            "Requirement already satisfied: tqdm in /usr/local/lib/python3.6/dist-packages (from kaggle) (4.28.1)\n",
+            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.0.1)\n",
+            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (3.0.4)\n",
+            "Requirement already satisfied: idna<2.7,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (2.6)\n",
+            "Requirement already satisfied: Unidecode>=0.04.16 in /usr/local/lib/python3.6/dist-packages (from python-slugify->kaggle) (1.0.23)\n",
+            "Requirement already satisfied: pillow in /usr/local/lib/python3.6/dist-packages (4.0.0)\n",
+            "Requirement already satisfied: olefile in /usr/local/lib/python3.6/dist-packages (from pillow) (0.46)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "1vupi9GeVq0H",
+        "colab_type": "code",
+        "outputId": "407b1817-9abe-4a74-d995-3b86c3f6bf0b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        }
+      },
+      "cell_type": "code",
+      "source": [
         "api_token = {\"username\":\"twoface262\",\"key\":\"453e89deca1ef616f15f5725eed93000\"}\n",
         "\n",
         "with open('kaggle.json', 'w') as kaggle_json:\n",
@@ -47,29 +90,18 @@
         {
           "output_type": "stream",
           "text": [
-            "Requirement already satisfied: kaggle in /usr/local/lib/python3.6/dist-packages (1.5.2)\n",
-            "Requirement already satisfied: urllib3<1.23.0,>=1.15 in /usr/local/lib/python3.6/dist-packages (from kaggle) (1.22)\n",
-            "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.6/dist-packages (from kaggle) (1.11.0)\n",
-            "Requirement already satisfied: certifi in /usr/local/lib/python3.6/dist-packages (from kaggle) (2018.11.29)\n",
-            "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.5.3)\n",
-            "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.18.4)\n",
-            "Requirement already satisfied: tqdm in /usr/local/lib/python3.6/dist-packages (from kaggle) (4.28.1)\n",
-            "Requirement already satisfied: python-slugify in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.0.1)\n",
-            "Requirement already satisfied: idna<2.7,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (2.6)\n",
-            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (3.0.4)\n",
-            "Requirement already satisfied: Unidecode>=0.04.16 in /usr/local/lib/python3.6/dist-packages (from python-slugify->kaggle) (1.0.23)\n",
             "Downloading sample_submission.csv to /content\n",
-            "  0% 0.00/446k [00:00<?, ?B/s]\n",
-            "100% 446k/446k [00:00<00:00, 67.8MB/s]\n",
+            "\r  0% 0.00/446k [00:00<?, ?B/s]\n",
+            "100% 446k/446k [00:00<00:00, 66.8MB/s]\n",
             "Downloading train.csv to /content\n",
             "  0% 0.00/1.22M [00:00<?, ?B/s]\n",
-            "100% 1.22M/1.22M [00:00<00:00, 82.1MB/s]\n",
+            "100% 1.22M/1.22M [00:00<00:00, 81.2MB/s]\n",
             "Downloading test.zip to /content\n",
-            "100% 4.37G/4.37G [01:53<00:00, 8.18MB/s]\n",
-            "\n",
+            "100% 4.37G/4.37G [01:55<00:00, 28.7MB/s]\n",
+            "100% 4.37G/4.37G [01:55<00:00, 40.6MB/s]\n",
             "Downloading train.zip to /content\n",
-            "100% 13.1G/13.1G [07:45<00:00, 23.6MB/s]\n",
-            "\n",
+            "100% 13.1G/13.1G [07:45<00:00, 23.0MB/s]\n",
+            "100% 13.1G/13.1G [07:45<00:00, 30.2MB/s]\n",
             "kaggle.json  sample_data  sample_submission.csv  test.zip  train.csv  train.zip\n"
           ],
           "name": "stdout"
@@ -94,23 +126,22 @@
       "metadata": {
         "id": "GRayhjX2_fbJ",
         "colab_type": "code",
-        "outputId": "c52cc066-6934-46a2-942d-06eb2455c1ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
-        }
+          "height": 34
+        },
+        "outputId": "92cac8ae-a057-4fe2-cb71-9d48175065ab"
       },
       "cell_type": "code",
       "source": [
         "!ls"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "data_train   sample_data\t    test.zip  train.csv\n",
-            "kaggle.json  sample_submission.csv  train\n"
+            "sample_data\n"
           ],
           "name": "stdout"
         }
@@ -126,7 +157,7 @@
       "source": [
         "\n",
         "class UNET_DATA:\n",
-        "\tdef __init__(self, labels_arr=None, image_arr=None):\n",
+        "\tdef __init__(self, labels_arr=None, image_arr=None, csv_path=None, images_path=None):\n",
         "\t\tself.current_batch = 0\n",
         "\t\tself.batch_size = 0\n",
         "\t\tself.total_batches = 0\n",
@@ -471,6 +502,39 @@
         "\t\t'''\n",
         "\t\t# To-Do: Implement when deep regressor is finished\n",
         "\t\treturn None"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "QcDoVC0wUgzQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "!ls"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "YWvL-RmfBBst",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "def test_unet_training(image_path, csv_path, batch_size, iterations):\n",
+        "  unet_data = UNET_DATA(images_path=image_path, csv_path=csv_path)\n",
+        "  unet = BSSCS_UNET(iterations, batch_size, unet_data)\n",
+        "  print(unet_data.get_next_batch())\n",
+        "  unet.train_unet()\n",
+        "\n",
+        "test_unet_training(image_path=\"data_train\", csv_path=\"train.csv\", batch_size=1, iterations=100)\n"
       ],
       "execution_count": 0,
       "outputs": []
