--- a/BSSCSFramework/TBI_Group9_UNET.ipynb
+++ b/BSSCSFramework/TBI_Group9_UNET.ipynb
@@ -19,10 +19,10 @@
       "metadata": {
         "id": "3tpRHd5-41Cu",
         "colab_type": "code",
-        "outputId": "753927b7-caa4-4cf6-8176-18bb89e3bf8c",
+        "outputId": "d781d5f2-48d0-470c-f650-45e44b68a508",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 323
+          "height": 267
         }
       },
       "cell_type": "code",
@@ -38,7 +38,7 @@
         "from PIL import Image\n",
         "import tensorflow as tf\n"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -51,8 +51,8 @@
             "Requirement already satisfied: requests in /usr/local/lib/python3.6/dist-packages (from kaggle) (2.18.4)\n",
             "Requirement already satisfied: tqdm in /usr/local/lib/python3.6/dist-packages (from kaggle) (4.28.1)\n",
             "Requirement already satisfied: python-slugify in /usr/local/lib/python3.6/dist-packages (from kaggle) (3.0.0)\n",
-            "Requirement already satisfied: idna<2.7,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (2.6)\n",
             "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (3.0.4)\n",
+            "Requirement already satisfied: idna<2.7,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests->kaggle) (2.6)\n",
             "Requirement already satisfied: text-unidecode==1.2 in /usr/local/lib/python3.6/dist-packages (from python-slugify->kaggle) (1.2)\n",
             "Requirement already satisfied: pillow in /usr/local/lib/python3.6/dist-packages (4.1.1)\n",
             "Requirement already satisfied: olefile in /usr/local/lib/python3.6/dist-packages (from pillow) (0.46)\n"
@@ -65,7 +65,11 @@
       "metadata": {
         "id": "1vupi9GeVq0H",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 114
+        },
+        "outputId": "469b164f-4fa8-433c-9b74-2f5a05db1c81"
       },
       "cell_type": "code",
       "source": [
@@ -83,8 +87,19 @@
         "!kaggle datasets download nikhilpandey360/chest-xray-masks-and-labels\n",
         "!ls"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Downloading chest-xray-masks-and-labels.zip to /content\n",
+            "100% 4.79G/4.79G [00:48<00:00, 123MB/s]\n",
+            "\n",
+            "chest-xray-masks-and-labels.zip  gdrive  kaggle.json  sample_data\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -636,6 +651,7 @@
         "    unet_save = tf.train.Saver()\n",
         "      \n",
         "    with tf.Session() as session:\n",
+        "      self.load_graph(unet_save, session, '/content/gdrive/My Drive/unet.ckpt')\n",
         "      tf.global_variables_initializer().run()\n",
         "      for iteration in range(0, self.iterations): # counts for epochs -- or how many times we go through our data\n",
         "        for batch in range(0, self.batch_size):\n",
@@ -763,7 +779,11 @@
       "metadata": {
         "id": "nQVaKG8ZPOd0",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 189
+        },
+        "outputId": "0edbcbf1-0e7f-4785-e2f1-c374bc19073f"
       },
       "cell_type": "code",
       "source": [
@@ -771,8 +791,20 @@
         "\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
