--- a/BSSCSFramework/TBI_Group9_UNET.ipynb
+++ b/BSSCSFramework/TBI_Group9_UNET.ipynb
@@ -19,10 +19,10 @@
       "metadata": {
         "id": "3tpRHd5-41Cu",
         "colab_type": "code",
-        "outputId": "d781d5f2-48d0-470c-f650-45e44b68a508",
+        "outputId": "fd0d7f6e-eec9-4536-c82d-871c7ade18c0",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 267
+          "height": 287
         }
       },
       "cell_type": "code",
@@ -38,7 +38,7 @@
         "from PIL import Image\n",
         "import tensorflow as tf\n"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,11 +65,11 @@
       "metadata": {
         "id": "1vupi9GeVq0H",
         "colab_type": "code",
+        "outputId": "7bf7a526-53e7-46c1-fad7-c9ea937a52a2",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 114
-        },
-        "outputId": "469b164f-4fa8-433c-9b74-2f5a05db1c81"
+          "height": 85
+        }
       },
       "cell_type": "code",
       "source": [
@@ -87,15 +87,15 @@
         "!kaggle datasets download nikhilpandey360/chest-xray-masks-and-labels\n",
         "!ls"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Downloading chest-xray-masks-and-labels.zip to /content\n",
-            "100% 4.79G/4.79G [00:48<00:00, 123MB/s]\n",
-            "\n",
-            "chest-xray-masks-and-labels.zip  gdrive  kaggle.json  sample_data\n"
+            "100% 4.79G/4.79G [00:41<00:00, 114MB/s]\n",
+            "100% 4.79G/4.79G [00:41<00:00, 124MB/s]\n",
+            "chest-xray-masks-and-labels.zip  kaggle.json  sample_data\n"
           ],
           "name": "stdout"
         }
@@ -149,14 +149,27 @@
       "metadata": {
         "id": "FmIa8P9r2yL6",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "bb0820e0-29fa-4cf3-ffa4-5af66194a7eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
       },
       "cell_type": "code",
       "source": [
         "!ls data_train/Lung\\ Segmentation"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "ClinicalReadings  masks\t\t\t       NLM-MontgomeryCXRSet-ReadMe.pdf\n",
+            "CXR_png\t\t  NLM-ChinaCXRSet-ReadMe.docx  test\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
@@ -410,7 +423,11 @@
       "metadata": {
         "id": "8EV4wcz57HcP",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "45b38b83-28c2-4a6e-8c84-6866e0783592",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        }
       },
       "cell_type": "code",
       "source": [
@@ -419,26 +436,51 @@
         "unet_data.data_dictionary = unet_data.fetch_images_and_masks_from_dir(\"masks\", \"ClinicalReadings\", \"CXR_png\")\n"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "No CSV\n",
+            "500\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "QcDoVC0wUgzQ",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "a92391dc-30cf-4ce2-b022-b01e3c8fbee1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "cell_type": "code",
       "source": [
         "!ls"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "chest-xray-masks-and-labels.zip  data_train  kaggle.json  sample_data\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "AKEbjChFU6ws",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "e0a6be6b-609d-471a-847c-3d87ee00fe8d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 269
+        }
       },
       "cell_type": "code",
       "source": [
@@ -450,7 +492,20 @@
         "display(PIL.Image.fromarray((np.array(data[0][0], dtype=np.uint8)*255).reshape(252, 252)).convert(\"RGB\"))\n"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAPwAAAD8CAIAAADcyV4wAAAGLUlEQVR4nO3d23KrxhZAUZTK//+y\n8kAVR0e2LoaGdekxnlJJZW/RTBYtLNvLAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAADAmW7R\nLyCR+/3+9G9uN+vTkJP6v9Z/Jr7+J+k3M/XpfMr91aR/+vcJr4Gfr3yV8KVmMOmiPI7wV8VsntJ5\nc2e42PtX8nhc4S81lenW4k+5v7L971ExPe27Pk76PBdqBhMtwZDcH91ut4u7/7gfe0X9j2Y58q3O\nIblvLuv+y9H+0eOfMG33/Q97y2Vs7psLuj/jir3+NpVH52Mevp955dSA1j/5jNc/bfdtD/ik/cwr\nJwV0XvGrObvvebRnt/Kr7W8c1dA1RzFh990O9ewd/HsDH2Veed3O1v0/0S9gpPXMRRW/jNtKXXyn\nCrkxBvo3+gUM0+bMRR2ISV9Mm+KXoPjWpeuxgB91iL5T8bEmGfblo+9XfOwbkk4r+Urt6PsVv4Q+\nS5nkGU7h6FsWzwVKPr0JfzTZ2Ayfwq836S/+fEGgwOZ6z5Ri0U9SfHhw9/u98f6+WPQzFL/K8NGA\nbZ2bLXil6PM/Uxtbap7uw+88Y5WJfs5nNam6D3wNY5WJfsLiV3m6b7P+NaJvs9z7JOm+zdwpcM+q\nstzXpBm4Dm12OAUmfZu1PijDZZ/hNRyXPfpmu8kjwjc5VW65H2WP3phnuNTRlxvzZ1+i4cO+h9TR\nF9Ljvv9Rj0sub/RtdpD9VD8peaNvMFHIKWn05Xbz82hwB049Taus7MXvL8OXpfpNOOOkN+Y/Cv9I\nwlL5BGWMvvoguUB4cKU3ORmjXxKc1LTyPDSs23266Csu4sySXIF/ki56Cim6uRc9h1Tc5OSKvuIK\nslTb5OSKnorKbXJEzxiFhr3oGaDQmF8SRl9r+XhU5dwlij7Pl13SskRDJIqej4b/1s45ib4Y3R8n\n+nrW7m11dhP9USHfrL39/Hjd75Alel+L3WEtXvd/lSX6osKzMyZ2EP1RsdnZ5OwgeqaTJXobei6T\nInq5c6UU0cOVRM8Yhd5Px0fvCX0nJc5jfPQcYWTsIPr9PCMvSvQMU2UEiJ7B8u+1RF9bicmaTYro\n88+GtCzdDsHRV9kFpuXN9A4pJj1HbN1L/0ui78A3zv6J6JvYcg//JSX5v1gm+obM+/dE303yKZtB\ncPT5b4XvJZypnud8FBm93E+i+/dsb/bLfNGG/5iGzES/R4mkMl+TsUS/U/6kSlyZIUT/Z4Viyn9l\nhhD9HlVi8o72V6L/m0JjnldE/2dVxvzKVfpTWPTlfg/jplxAFRf5VJGTvlw9Rb9+bNg/sb2ZQsVr\n9Tyi/1bpJyGG/SPRz8Kw34j+W3XH/Kr0nWos0X9FK52IfiKG/Ur03+rRine0i+i/1+aNYJsD2U30\nnzXbFTQ7nB1Ez3Rioi/x01FWLTfBkw97k/6zEhcn34uJvsqYb2zaMb+ERF8o997bgMaH9p7tDYPl\nf8MmeqYj+nn13ry9IXqmI3rGS34DEf07yU9ecmnfy4r+pUlyn/DCFv077Wtof4C/Ev3v1hrS3qDz\ny/y0/t/oFzDYkNF1v9/9sr4hci5gk+i3xR01WnKerXJyvmEoH/3TPiThEk9r2+FkOymFo3/MPduy\nVpF5532eq6Mfsspy54hik17uHFcp+u0WIXeOuPo5/b69zTbgb7eb4jno0km/4438Y+7nvCimk3d7\nY/t+gcef9TDPM5yk0du+X+bxSxyTdH/dnv77h5XbVzQUf4FtneeZMrkmvR18lMfPcQzc7eT8omyi\n6A34DH5uLPvtebJEn3AeTOvVx5na1J8iesUn9LP1Ng954qNXfHJP9TdIP/g7p1r+TOCu1rdb63fY\nfH/KEn6QM/7bBVMtBx9t6S9lp1Xk9sbGpq6nh8u1Jtd1k/7pHmdj08CO3U4GAZ+y3P651njgV9tu\np1b311kr13pL22m9/78l3xkPeyObbSE4qNC724Do3Q27qtJ92O+cCvl7OVuJ7v3OKQYr0f1Fcr6n\n4SRO9LI8/IBIJmHMzX3ws5p90k198AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAQGn/AX735VwBXB6JAAAAAElFTkSuQmCC\n",
+            "text/plain": [
+              "<PIL.Image.Image image mode=RGB size=252x252 at 0x7FA13310CF28>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "metadata": {
@@ -478,6 +533,7 @@
         "# https://arxiv.org/pdf/1505.04597.pdf\n",
         "import tensorflow as tf\n",
         "from google.colab import drive\n",
+        "from tensorflow.python.tools.inspect_checkpoint import print_tensors_in_checkpoint_file\n",
         "\n",
         "class BSSCS_UNET:\n",
         "  def __init__(self, iterations, batch_size, data_class, labels_shape=[None, 1], learning_rate=0.0001):\n",
@@ -651,7 +707,7 @@
         "    unet_save = tf.train.Saver()\n",
         "      \n",
         "    with tf.Session() as session:\n",
-        "      self.load_graph(unet_save, session, '/content/gdrive/My Drive/unet.ckpt')\n",
+        "      self.load_graph(unet_save, conv_input, '/unet/')\n",
         "      tf.global_variables_initializer().run()\n",
         "      for iteration in range(0, self.iterations): # counts for epochs -- or how many times we go through our data\n",
         "        for batch in range(0, self.batch_size):\n",
@@ -661,6 +717,9 @@
         "          print(\"next batch\")\n",
         "          session.run(optimizer, feed_dict={input_ph:X_b, mask_placeholder:y_b})\n",
         "        if iteration % 2 == 0:\n",
+        "          print(\"Current Tensors\")\n",
+        "          for tensor in tf.get_default_graph().as_graph_def().node:\n",
+        "            print(tensor)\n",
         "          print(\"Iteration: \", iteration)\n",
         "          it_loss = session.run(loss, feed_dict={input_ph:X_b, mask_placeholder:y_b})\n",
         "          lungs = session.run(conv_input, feed_dict={input_ph: X_b})\n",
@@ -676,7 +735,7 @@
         "          print(\"Passed 100 iterations with mse: \", it_loss)\n",
         "        if iteration % 100 == 0:\n",
         "          print(\"Saving to drive\")\n",
-        "          self.save_graph(unet_save, session, '/content/gdrive/My Drive/unet.ckpt')\n",
+        "          self.save_graph(unet_save, session, '/content/gdrive/My Drive/unetSave/unet.ckpt')\n",
         "\n",
         "\n",
         "\n",
@@ -747,7 +806,10 @@
         "        Load referenced from TensorFlow Documentation:\n",
         "        - https://www.tensorflow.org/guide/saved_model\n",
         "    '''\n",
-        "    unet_save.restore(session, path)"
+        "    print(\"Tensors being loaded: \")\n",
+        "    print_tensors_in_checkpoint_file(tf.train.latest_checkpoint(str(path)), all_tensors=True, tensor_name='')\n",
+        "    unet_save.restore(session, tf.train.latest_checkpoint(str(path)))\n",
+        "    print(session.to_json)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -756,7 +818,11 @@
       "metadata": {
         "id": "YWvL-RmfBBst",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "546356f5-295e-4827-8b9c-0b1242d6b493",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "cell_type": "code",
       "source": [
@@ -773,17 +839,21 @@
         "test_unet_training(image_path=\"data_train\", csv_path=\"train.csv\", batch_size=10, iterations=3100)\n"
       ],
       "execution_count": 0,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "No CSV\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
         "id": "nQVaKG8ZPOd0",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 189
-        },
-        "outputId": "0edbcbf1-0e7f-4785-e2f1-c374bc19073f"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -791,16 +861,46 @@
         "\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "0EIcvFrRIIqZ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "!cp -a '/content/gdrive/My Drive/unetSave/.' /unet/"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "DmQxrgJnKTcA",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 97
+        },
+        "outputId": "26acff8e-fafc-46f2-ff7b-1a80e433253a"
+      },
+      "cell_type": "code",
+      "source": [
+        "!ls 'gdrive/My Drive/unetSave'\n",
+        "!mkdir /unet\n",
+        "!ls /unet"
+      ],
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/gdrive\n"
+            "checkpoint  unet.ckpt.data-00000-of-00001  unet.ckpt.index  unet.ckpt.meta\n",
+            "mkdir: cannot create directory ‘/unet’: File exists\n",
+            "checkpoint  unet.ckpt.data-00000-of-00001  unet.ckpt.index  unet.ckpt.meta\n"
           ],
           "name": "stdout"
         }
